<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Pedidos</string>
    <string name="login_activity_title">Login</string>
    <string name="login_activity_usuario">Usuario:</string>
    <string name="login_activity_usuario_hint">Ingresar Usuario</string>
    <string name="login_activity_password">Password:</string>
    <string name="login_activity_password_hint">Ingresar Password</string>
    <string name="login_activity_btn_ingresar">Ingresar</string>
    <string name="resumen_activity_title">Resumen</string>
    <string name="resumen_activity_indicador_column"> </string>
    <string name="resumen_activity_descripcion_column">Descripción</string>
    <string name="resumen_activity_actual_column">Actual</string>
    <string name="resumen_activity_meta_column">Meta</string>
    <string name="buscarcliente_activity_title">Buscar Cliente</string>
    <string name="buscarcliente_activity_documento">Documento:</string>
    <string name="buscarcliente_activity_descripcion">Descripción:</string>
    <string name="buscarcliente_activity_documento_hint">Ingresar Dni / Ruc</string>
    <string name="buscarcliente_activity_descripcion_hint">Ingresar Apellidos/R.Social</string>
    <string name="buscarcliente_content_resumen_title">RESUMEN</string>
    <string name="buscarcliente_content_descripcion">Descripción:</string>
    <string name="buscarcliente_content_documento">Documento:</string>
    <string name="buscarcliente_content_deuda">Deuda Vencida:</string>
    <string name="buscarcliente_content_venta">Venta Galones:</string>
    <string name="buscarcliente_content_credito_title">CRÉDITO</string>
    <string name="buscarcliente_content_credito_limite">Límite</string>
    <string name="buscarcliente_content_credito_disponible">Disponible</string>
    <string name="buscarcliente_content_credito_encartera">En Cartera</string>
    <string name="buscarcliente_content_credito_totalvencido">Total Vencido</string>
    <string name="buscarcliente_content_credito_agregarpedido">+Pedido</string>
    <string name="buscarcliente_content_credito_letras">Letras</string>
    <string name="buscarcliente_content_credito_ubicacion">Ubicación</string>
    
    <string name="buscarproducto_activity_title">Buscar Productos</string>
    <string name="buscarproducto_activity_descripcion">Descripción:</string>
    <string name="buscarproducto_activity_descripcion_hint">Ingresar Descripción</string>
    <string name="buscarproducto_activity_cancelar">Cancelar</string>
    <string name="buscarproducto_activity_producto_frecuente">Producto Frecuente</string>
    <string name="buscarproducto_activity_producto_alternativo">Producto Alternativo</string>
    <string name="buscarproducto_activity_nunca_comprado">Nunca Comprado</string>
    <string name="productoestrategia_activity_title">Estrategia</string>
    
    <string name="pedido_activity_title">Pedido</string>
    <string name="pedido_activity_add_producto">+Producto</string>
    <string name="pedido_activity_producto">Producto:</string>
    <string name="pedido_activity_producto_hint">Seleccionar Producto</string>
    <string name="pedido_activity_cantidad">Cantidad:</string>
    <string name="pedido_activity_cantidad_hint">Ingresar Cantidad</string>
    <string name="pedido_activity_precio">Precio:</string>
    <string name="pedido_activity_agregar">+</string>
    
    <string-array name="pedido_activity_lista_precio">
        <item>3</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    
    <string name="pedido_content_eliminar">-</string>
    
</resources>
