
    
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

  
    <TextView android:text="@string/login_activity_usuario" android:focusable="false" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
	<EditText android:id="@+id/txtUsuario" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/login_activity_usuario_hint" android:inputType="number" android:maxLength="8"></EditText>
      
	<TextView android:text="@string/login_activity_password" android:focusable="false" android:layout_height="wrap_content"  android:layout_width="fill_parent"></TextView>
  	<EditText android:id="@+id/txtPassword" android:layout_width="fill_parent" android:hint="@string/login_activity_password_hint" android:layout_height="wrap_content"  android:inputType="textPassword" android:maxLength="8"></EditText>
               
   <Button android:layout_width="wrap_content" 
    android:layout_gravity="right" 
    android:id="@+id/btnLogin" 
    android:layout_height="wrap_content" 
    android:text="@string/login_activity_btn_ingresar" 
    android:focusable="false"
    android:onClick="btnIngresar_onclick"></Button>
   
   
   
   
   
   
   </LinearLayout>