<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout 
  	android:layout_height="wrap_content" 
  	android:layout_width="fill_parent">
  		
      <TableRow>
      	<TextView android:text="@string/pedido_activity_producto" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_span="2"/>
      </TableRow>
      
       <TableRow>
        <EditText android:id="@+id/txtProducto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/buscarcliente_activity_documento_hint" android:text="" android:layout_weight="1" android:inputType="textCapCharacters" android:maxLength="50" android:singleLine="true"/>
        <ImageButton android:onClick="btnBuscar_onlick" android:src="@drawable/search" android:contentDescription="@string/pedido_activity_producto_hint" ></ImageButton>
      </TableRow>
   
        
   </TableLayout>
   
    <TableLayout 
  	android:layout_height="wrap_content" 
  	android:layout_width="fill_parent">
  	
       
      <TableRow>
      	<TextView android:text="@string/pedido_activity_cantidad" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="2"/>
      	<TextView android:text="@string/pedido_activity_precio" android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="2"/>
      	<TextView android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1"/>
      </TableRow>
      
      <TableRow>
         <EditText android:id="@+id/txtCantidad" android:layout_width="0dip" android:layout_height="wrap_content" android:hint="@string/pedido_activity_cantidad_hint" android:text="" android:layout_weight="2" android:inputType="number" android:maxLength="20" android:singleLine="true"/>
         <Spinner  android:id="@+id/cboPrecio" android:layout_width="0dip" android:layout_height="wrap_content"   android:entries="@array/pedido_activity_lista_precio" android:entryValues="@array/pedido_activity_lista_precio" android:layout_weight="2"/>
         <Button android:text="@string/pedido_activity_agregar" android:onClick="btnAgregar_onlick"  android:layout_width="0dip" android:layout_height="wrap_content" android:layout_weight="1" android:focusable="false"/>
       </TableRow>
       
     
       
  </TableLayout>

    <ListView android:id="@+id/android:list"
				android:clickable="true"
				android:addStatesFromChildren="true"
		        android:choiceMode="singleChoice"
		       	android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
    

</LinearLayout>