<?xml version="1.0" encoding="utf-8"?>

    
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
   
    		
  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_height="wrap_content" 
  	android:layout_width="fill_parent">
  		
      <TableRow>
      	<TextView android:text="@string/buscarcliente_activity_documento" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_span="2"/>
      </TableRow>
      <TableRow>
         <EditText android:id="@+id/txtDocumento" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/buscarcliente_activity_documento_hint" android:text="" android:layout_weight="1" android:inputType="number" android:maxLength="20" android:singleLine="true"/>
         <ImageButton android:onClick="btnbuscar_onclick" android:src="@drawable/search" android:contentDescription="@string/buscarcliente_activity_documento" ></ImageButton>
       </TableRow>
       <TableRow>
      	<TextView android:text="@string/buscarcliente_activity_descripcion" android:layout_height="wrap_content"  android:layout_width="fill_parent" android:layout_span="2"></TextView>
      </TableRow>
       <TableRow>
           	
            <EditText android:id="@+id/txtDescripcion" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/buscarcliente_activity_descripcion_hint" android:layout_weight="1" android:maxLength="20" android:singleLine="true"/>
            <ImageButton android:onClick="btnbuscar_onclick" android:src="@drawable/search" android:contentDescription="@string/buscarcliente_activity_descripcion"/>
       </TableRow>
       
  </TableLayout>

   <ListView android:id="@+id/android:list"
				android:clickable="true"
				android:addStatesFromChildren="true"
		        android:choiceMode="singleChoice"
		       	android:layout_width="fill_parent"
				android:layout_height="fill_parent"/>
   
  </LinearLayout>
      
