<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
   

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
        		
                
                 
                 <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            

                        
                  
                     <TextView
              	android:layout_weight="1" 
              	android:layout_height="wrap_content" 
              	android:layout_width="fill_parent"
                style="@style/TextViewHead"
                android:text="@string/resumen_activity_indicador_column"/>
                     
                  <TextView
              	android:layout_weight="4" 
              	android:layout_height="wrap_content" 
              	android:layout_width="fill_parent"
                style="@style/TextViewHead"
                android:text="@string/resumen_activity_descripcion_column"/>
			
                <TextView
               	android:layout_weight="2" 
               	android:layout_height="wrap_content" 
               	android:layout_width="fill_parent" 
               	android:gravity="right"
               	style="@style/TextViewHead"
                android:text="@string/resumen_activity_actual_column"/>
                
                 <TextView
               	android:layout_weight="2" 
               	android:layout_height="wrap_content" 
               	android:layout_width="fill_parent" 
               	android:gravity="right"
               	style="@style/TextViewHead"
                android:text="@string/resumen_activity_meta_column"/>
          
              </TableRow>
             </TableLayout>
              <ListView android:id="@+id/android:list"
				android:clickable="true"
				android:addStatesFromChildren="true"
		        android:choiceMode="singleChoice"
		       	android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
		          
           
</LinearLayout>