<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:weightSum="4">

  <TableLayout
  	android:layout_height="wrap_content" 
  	android:layout_width="fill_parent"
  	android:layout_weight="1">
  		
      <TableRow>
      	<TextView android:text="@string/buscarproducto_activity_descripcion" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_span="2"/>
      </TableRow>
      <TableRow>
         <EditText android:id="@+id/txtDocumento" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/buscarproducto_activity_descripcion_hint" android:layout_weight="4" android:inputType="text" android:maxLength="50" android:singleLine="true"/>
         <ImageButton android:onClick="btnbuscar_onclick" android:src="@drawable/search" android:layout_width="wrap_content" android:contentDescription="@string/buscarcliente_activity_documento" android:layout_weight="1" ></ImageButton>
       </TableRow>
       
  </TableLayout>

   <ListView android:id="@+id/android:list"
				android:clickable="true"
				android:addStatesFromChildren="true"
		        android:choiceMode="singleChoice"
		       	android:layout_width="fill_parent"
				android:layout_height="180dip"
				
  				android:layout_weight="2"/>

  
<TableLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" 
  	android:layout_weight="1">

       <TableRow>
     
    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_span="2"
        android:text="Cancelar" 
        android:layout_weight="1"
        style="@style/ButtonCustom"
        android:layout_margin="1dip"
        android:onClick="btnCancelar_onclick"/>
    
     
      
         <!--Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_margin="1dip"
        
        style="@style/ButtonCustom"
        android:text="Aceptar" android:onClick="btnAceptar_onclick" / -->
    
         
       </TableRow>
   </TableLayout>
  
  <TableLayout
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" 
  	android:layout_weight="1">
       <TableRow>
          <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_verde" />
          <TextView android:text="Producto Frecuente" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
      </TableRow>
      
       <TableRow>
          <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_amarrillo" />
          <TextView android:text="Producto Alternativo" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
      </TableRow>
      
      <TableRow>
          <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon_rojo" />
          <TextView android:text="Nunca Comprado" android:layout_height="wrap_content" android:layout_width="fill_parent"/>
      </TableRow>
 </TableLayout>
</LinearLayout>